fix school intro loading issue and display issue on firefox

--- a/app/assets/stylesheets/admin.less
+++ b/app/assets/stylesheets/admin.less
@@ -240,6 +240,16 @@
   }
 }
 
+.school-desc {
+  padding: 0;
+  margin: 0;
+}
+
+.school-desc-label {
+  padding-left: 0;
+  margin-left: 0;
+}
+
 @import "d3style.less";
 @import "animates.less";
 
